# dcmtk-learn

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
dcmtk-win-learn/: CMakeLists.txt  dcmtk-data.cpp  dcmtk-data.h  dcmtk-net.cpp  dcmtk-scp.cpp  dcmtk-scu.cpp  dcmtk-win-learn.cpp
samples/: DDOSERPT
